RealNullaryFunction.parse